# kat

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: labeler.yml  labels.yml
.github/workflows/: ci-pull-request-validation.yml  ci-release.yml  ci-snapshot.yml
backend/: build.gradle.kts
detekt/: baseline.xml  config.yml
example-android-application/: build.gradle.kts
frontend/android/: build.gradle.kts
frontend/android/src/main/: AndroidManifest.xml
frontend/coroutine-wrapper/: build.gradle.kts
frontend/coroutine-wrapper/src/androidMain/: AndroidManifest.xml
frontend/desktop/: build.gradle.kts
frontend/ios/compose/: build.gradle.kts  compose.podspec
frontend/ios/swift/: Podfile
frontend/ios/swift/AwesomeCats/: Podfile
frontend/js/: build.gradle.kts
frontend/js/webpack.config.d/: wasm.js
frontend/shared-feature/: build.gradle.kts
frontend/shared-ui/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kmp-lib/: build.gradle.kts
kmp-lib/src/androidMain/: AndroidManifest.xml
rust/bigint/: build.gradle.kts
rust/bigint/karma.config.d/: wasm.js
rust/bigint/rsrc/: Cargo.toml
rust/bigint/rsrc/src/: BigUIntArithmetic.rs  lib.rs
rust/bigint/rsrc/src/BigUIntArithmetic/: BigIntegerArithmeticSpec.rs  Jvm.rs  Native.rs  WASM.rs
rust/bigint/wasm/: bigint_arithmetic.d.ts  bigint_arithmetic.js  bigint_arithmetic_bg.wasm  bigint_arithmetic_bg.wasm.d.ts  package.json
setup/: build.gradle.kts  settings.gradle.kts
shared/: build.gradle.kts
(+175 files in other folders)
