[package]
name = "bigint_arithmetic"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-test = "0.3.33"
js-sys = "0.3.60"
libc = "0.2.0"
num-bigint-dig =  { version = "0.8.1" , features = ["prime", "serde"], default-features = false }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
num-integer = "0.1.45"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
jni = { version = "0.19.0", default-features = false }

[features]
default = ["console_error_panic_hook"]
jvm = []
native = []

[profile.release]
lto = true

[lib]
name = "bigint_arithmetic"
crate-type = ["cdylib","lib","staticlib"]
